# tmp_1024_256

./: Makefile  README.md  clean.sh  common.h  data.S  demo_outside  demo_outside.S  demo_outside.c  demo_outside_dump.s  demo_outside_new.S  demo_outside_while.S  demo_outside_while_new.S  history.txt  history_test  history_test.cpp  inject_lib.c  inject_lib.cpp  map_def.bpf.c  patch.c  patch.h  run.sh  translate.py  translate_right.s  translator.py
include/: addr.h  addr_analysis.h  addr_cfg.h  addr_init.h  asm.h  binary.h  common.h  config.h  core.h  cpu.h  globals.h  handle.h  patch.h  thread.h  types.h  utils.h  vector_context.h  vector_translation.h
scripts/: assembly_utils.py  inst_to_so.py  test.sh  tmp.py  translator.py
src/: addr.cpp  addr_analysis.cpp  addr_cfg.cpp  addr_init.cpp  binary.cpp  config.cpp  globals.cpp  handle.cpp  main.cpp  patch.cpp  thread.cpp  vector_context.cpp
src/core/: handle.cpp  handler.cpp  patch.cpp
src/utils/: addr.cpp  code_block.cpp  dump.cpp  other.cpp
src/vector_translation/: translation_id.cpp  translation_ranges.cpp  translation_shared_lib.cpp  vector_context.cpp
test/: CMakeLists.txt  output_fragments.s  test_addr.cpp  test_addr_manager.cpp  test_code_block.cpp  test_dump_analyzer.cpp  test_dump_analyzer_file.cpp  test_dump_file_for_translator.s  test_make_dump_fragments_file.cpp  test_translator_asm_output.s  test_vector_translation.cpp
